# python-2023

./: .gitignore  02.Python_snippets.ipynb  04.Pandas_Introduction.ipynb  requirements.txt
examples/: PyTorch.ipynb
examples/fastapi/: app.py
examples/flask/: app.py
examples/python_tools/: README.md  notes.ipynb  pyproject.toml  pyproject_poetry.toml
examples/streamlit/: app.py
tasks/: Q.md
